--- a/templates/auth.html
+++ b/templates/auth.html
@@ -3,8 +3,8 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="/css/output.css">
-      <link rel="stylesheet" href="/css/customStyles.css">
+      <link rel="stylesheet" href="./static/css/output.css">
+      <link rel="stylesheet" href="./static/css/customStyles.css">
       <title>Document</title>
    </head>
    <body class="bg-customWhite">
@@ -43,7 +43,7 @@
             <!-- Assistant Section -->
             <div class="w-full md:w-1/2 flex justify-center">
                <div class="relative">
-                  <img src="/assets/img/png/janna-hello.png" alt="Assistant" class="w-48 h-48 object-cover rounded-full">
+                  <img src="./static/assets/img/png/janna-hello.png" alt="Assistant" class="w-48 h-48 object-cover rounded-full">
                   <div class="absolute top-0 right-0 -mt-12 -mr-4 bg-customWhite p-4 rounded-lg shadow-md">
                      <p class="text-sm font-bold">Привет!</p>
                      <p class="text-sm">Я Жанна - твой персональный помощник</p>
