--- a/templates/colorsWoman.html
+++ b/templates/colorsWoman.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/output.css">
-        <link rel="stylesheet" href="/css/customStyles.css">
+        <link rel="stylesheet" href="./static/css/output.css">
+        <link rel="stylesheet" href="./static/css/customStyles.css">
         <title>Document</title>
 </head>
 <body class="bg-gray-200">
@@ -14,7 +14,7 @@
             <div class="w-full max-w-4xl">
 
                 <div class="w-full max-w-4xl flex justify-start items-start pb-5">
-                    <img src="/assets/img/svg/logo.svg" alt="">
+                    <img src="./static/assets/img/svg/logo.svg" alt="">
                 </div>
                 <!-- Card Selection Section -->
                 <div class="bg-customWhite p-8 shadow-md relative">
@@ -25,21 +25,21 @@
                         <div class="flex justify-center gap-20">
                             <div class="flex flex-col items-center">
                                 <div class="w-24 h-24 border-2 border-customBlack cursor-pointer" onclick="selectSquare(this)">
-                                    <img src="/assets/img/png/colorsGammaWoman1.png" alt="Image 4" class="w-full h-full object-cover">
+                                    <img src="./static/assets/img/png/colorsGammaWoman1.png" alt="Image 4" class="w-full h-full object-cover">
                                 </div>
                                 <span class="mt-2 text-sm text-center">Серая</span>
                             </div>
                     
                             <div class="flex flex-col items-center">
                                 <div class="w-24 h-24 border-2 border-customBlack cursor-pointer" onclick="selectSquare(this)">
-                                    <img src="/assets/img/png/colorsGammaWoman2.png" alt="Image 5" class="w-full h-full object-cover">
+                                    <img src="./static/assets/img/png/colorsGammaWoman2.png" alt="Image 5" class="w-full h-full object-cover">
                                 </div>
                                 <span class="mt-2 text-sm text-center">Бежевая</span>
                             </div>
                     
                             <div class="flex flex-col items-center">
                                 <div class="w-24 h-24 border-2 border-customBlack cursor-pointer" onclick="selectSquare(this)">
-                                    <img src="/assets/img/png/colorsGammaWoman3.png" alt="Image 6" class="w-full h-full object-cover">
+                                    <img src="./static/assets/img/png/colorsGammaWoman3.png" alt="Image 6" class="w-full h-full object-cover">
                                 </div>
                                 <span class="mt-2 text-sm text-center">Пастельная</span>
                             </div>
@@ -49,21 +49,21 @@
                         <div class="flex justify-center gap-20 mt-5">
                             <div class="flex flex-col items-center">
                                 <div class="w-24 h-24 border-2 border-customBlack cursor-pointer" onclick="selectSquare(this)">
-                                    <img src="/assets/img/png/colorsGammaWoman4.png" alt="Image 4" class="w-full h-full object-cover">
+                                    <img src="./static/assets/img/png/colorsGammaWoman4.png" alt="Image 4" class="w-full h-full object-cover">
                                 </div>
                                 <span class="mt-2 text-sm text-center">Мягкая</span>
                             </div>
                     
                             <div class="flex flex-col items-center">
                                 <div class="w-24 h-24 border-2 border-customBlack cursor-pointer" onclick="selectSquare(this)">
-                                    <img src="/assets/img/png/colorsGammaWoman5.png" alt="Image 5" class="w-full h-full object-cover">
+                                    <img src="./static/assets/img/png/colorsGammaWoman5.png" alt="Image 5" class="w-full h-full object-cover">
                                 </div>
                                 <span class="mt-2 text-sm text-center">Темная</span>
                             </div>
                     
                             <div class="flex flex-col items-center">
                                 <div class="w-24 h-24 border-2 border-customBlack cursor-pointer" onclick="selectSquare(this)">
-                                    <img src="/assets/img/png/colorsGammaWoman6.png" alt="Image 6" class="w-full h-full object-cover">
+                                    <img src="./static/assets/img/png/colorsGammaWoman6.png" alt="Image 6" class="w-full h-full object-cover">
                                 </div>
                                 <span class="mt-2 text-sm text-center">Яркая</span>
                             </div>
@@ -76,14 +76,14 @@
                     <div class="flex justify-end mt-6">
                         <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
                             <button onclick="window.location.href='skin10.html'">
-                                <img src="/assets/img/png/prev.png" alt="">
+                                <img src="./static/assets/img/png/prev.png" alt="">
                             </button>
                             
                             <!-- Separator -->
                             <div class="w-1 h-8 bg-customBlack mx-2"></div>
                             
                             <button onclick="window.location.href='chooseDeatelnost.html'">
-                                <img src="/assets/img/png/next.png" alt="">
+                                <img src="./static/assets/img/png/next.png" alt="">
                             </button>
                         </div>
                     </div>
