--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="/css/output.css">
-      <link rel="stylesheet" href="/css/customStyles.css">
+      <link rel="stylesheet" href="./static/css/output.css">
+      <link rel="stylesheet" href="./static/css/customStyles.css">
       <title>Выбор пола</title>
    </head>
    <body class="bg-gray-100 font-sans">
@@ -14,7 +14,7 @@
       <!-- Logo -->
       <div class="ml-20">
         <a href="index.html">
-          <img src="/assets/img/svg/logoHead.svg" alt="">
+          <img src="./static/assets/img/svg/logoHead.svg" alt="">
         </a>
       </div>
   
@@ -27,7 +27,7 @@
   
       <!-- Menu Icon -->
       <div class="text-3xl cursor-pointer mr-10">
-        <img src="/assets/img/svg/burger-menu.svg" alt="">
+        <img src="./static/assets/img/svg/burger-menu.svg" alt="">
       </div>
     </header>
   
@@ -37,17 +37,17 @@
       <div class="grid grid-cols-1 md:grid-cols-3 gap-20 px-4">
         <!-- Image 1 -->
         <div class="overflow-hidden">
-          <img src="/assets/img/png/card-1.png" alt="Image 1" class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 ease-in-out">
+          <img src="./static/assets/img/png/card-1.png" alt="Image 1" class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 ease-in-out">
         </div>
       
         <!-- Image 2 -->
         <div class="overflow-hidden">
-          <img src="/assets/img/png/card-2.png" alt="Image 2" class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 ease-in-out">
+          <img src="./static/assets/img/png/card-2.png" alt="Image 2" class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 ease-in-out">
         </div>
       
         <!-- Image 3 -->
         <div class="overflow-hidden">
-          <img src="/assets/img/png/card-3.png" alt="Image 3" class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 ease-in-out">
+          <img src="./static/assets/img/png/card-3.png" alt="Image 3" class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 ease-in-out">
         </div>
       </div>
   
