--- a/templates/lkStilist.html
+++ b/templates/lkStilist.html
@@ -3,8 +3,8 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="/css/output.css">
-      <link rel="stylesheet" href="/css/customStyles.css">
+      <link rel="stylesheet" href="./static/css/output.css">
+      <link rel="stylesheet" href="./static/css/customStyles.css">
       <title>Личный кабинет - Клиент</title>
    </head>
    <body class="bg-gray-100 font-sans">
@@ -14,13 +14,13 @@
       <!-- Logo -->
       <div class="ml-20">
         <a href="index.html">
-          <img src="/assets/img/svg/logoHead.svg" alt="">
+          <img src="./static/assets/img/svg/logoHead.svg" alt="">
         </a>
       </div>
   
       <!-- Menu Icon -->
       <div class="text-3xl cursor-pointer mr-10">
-        <img src="/assets/img/svg/burger-menu.svg" alt="">
+        <img src="./static/assets/img/svg/burger-menu.svg" alt="">
       </div>
       
     </header>
@@ -38,7 +38,7 @@
             <!-- Profile Info -->
             <div class="flex items-center gap-6 mb-6">
               <!-- Фото профиля -->
-              <img src="/assets/img/png/avatarStilist.png" alt="Фото профиля" class="w-32 h-32 rounded-full">
+              <img src="./static/assets/img/png/avatarStilist.png" alt="Фото профиля" class="w-32 h-32 rounded-full">
   
               <!-- Имя, Фамилия и Возраст -->
               <div>
