--- a/templates/capsula.html
+++ b/templates/capsula.html
@@ -3,8 +3,8 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="/css/output.css">
-      <link rel="stylesheet" href="/css/customStyles.css">
+      <link rel="stylesheet" href="./static/css/output.css">
+      <link rel="stylesheet" href="./static/css/customStyles.css">
       <title>Выбор пола</title>
    </head>
    <body class="bg-customWhite">
@@ -13,7 +13,7 @@
     <header class="flex items-center justify-between p-6 bg-customWhite shadow-md">
       <!-- Logo -->
       <div class="ml-20">
-        <img src="/assets/img/svg/logoHead.svg" alt="">
+        <img src="./static/assets/img/svg/logoHead.svg" alt="">
       </div>
   
       <!-- Navigation -->
@@ -25,7 +25,7 @@
   
       <!-- Menu Icon -->
       <div class="text-3xl cursor-pointer mr-10">
-        <img src="/assets/img/svg/burger-menu.svg" alt="">
+        <img src="./static/assets/img/svg/burger-menu.svg" alt="">
       </div>
     </header>
   
@@ -42,7 +42,7 @@
 
       <!-- Model Image -->
       <div class="absolute right-10 top-0 w-auto h-screen flex items-center justify-end">
-          <img src="/assets/img/png/capsula.png" alt="Model" class="object-cover">
+          <img src="./static/assets/img/png/capsula.png" alt="Model" class="object-cover">
       </div>
       
   </main>
@@ -76,7 +76,7 @@
               <h3 class="text-xl mb-4 border-b border-white inline-block oswald-weight-medium">Получить услугу</h3>
               <div class="flex items-center bg-white rounded-full overflow-hidden mb-4">
                   <div class="flex-1 flex items-center pl-4">
-                      <img src="/assets/img/svg/lupa.svg" alt="Search" class="w-5 h-5">
+                      <img src="./static/assets/img/svg/lupa.svg" alt="Search" class="w-5 h-5">
                       <input type="text" placeholder="Найти стилиста для услуги..." 
                              class="w-full px-3 py-2 oswald-weight-medium text-black focus:outline-none">
                   </div>
@@ -100,8 +100,8 @@
       <!-- Нижняя часть футера -->
       <div class="container mx-auto px-4 mt-8 flex justify-between items-center">
           <div class="flex gap-4">
-              <a href="#"><img src="/assets/img/svg/vk-logo.svg" alt="VK" class="w-6 h-6"></a>
-              <a href="#"><img src="/assets/img/svg/tg-logo.svg" alt="Telegram" class="w-6 h-6"></a>
+              <a href="#"><img src="./static/assets/img/svg/vk-logo.svg" alt="VK" class="w-6 h-6"></a>
+              <a href="#"><img src="./static/assets/img/svg/tg-logo.svg" alt="Telegram" class="w-6 h-6"></a>
           </div>
           <p class="text-base oswald-weight-medium">Copyright © RUSSIA 2024. Все права защищены</p>
       </div>
