--- a/templates/chooseClientOrStyle.html
+++ b/templates/chooseClientOrStyle.html
@@ -15,21 +15,21 @@
             <!-- Form Section -->
             <form method="post" class="w-full">
                <div class="">
-                  <h2 class="text-2xl font-bold mb-6 text-center">Выберите ваш пол</h2>
+                  <h2 class="text-2xl font-bold mb-6 text-center">Выберите вашу категорию</h2>
                   <!-- Кнопки выбора пола -->
                   <div class="flex flex-col space-y-6">
                      <!-- Радиокнопка для Мужского пола -->
                      <label for="male" class="w-full">
                         <input type="radio" id="male" name="gender" value="male" class="hidden peer">
                         <div class="w-full px-6 py-3 bg-gray-300 text-gray-800 font-bold rounded-lg text-center peer-checked:bg-black peer-checked:text-white transition duration-300 cursor-pointer">
-                           Мужской
+                           Клиент
                         </div>
                      </label>
                      <!-- Радиокнопка для Женского пола -->
                      <label for="female" class="w-full">
                         <input type="radio" id="female" name="gender" value="female" class="hidden peer">
                         <div class="w-full px-6 py-3 bg-gray-300 text-gray-800 font-bold rounded-lg text-center peer-checked:bg-black peer-checked:text-white transition duration-300 cursor-pointer">
-                           Женский
+                           Стилист
                         </div>
                      </label>
                   </div>
@@ -49,7 +49,7 @@
                <div class="relative">
                   <img src="./static/assets/img/png/janna-hello.png" alt="Иконка" class="w-48 h-48 object-cover rounded-full">
                   <div class="absolute top-0 mx-auto -mt-12 mr-4 bg-customWhite p-4 rounded-lg shadow-md text-center">
-                     <p class="text-sm font-bold">Выбери пол и продолжим!</p>
+                     <p class="text-sm font-bold">Кто вы?</p>
                   </div>
                </div>
             </div>
