--- a/templates/chooseDeatelnost.html
+++ b/templates/chooseDeatelnost.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/output.css">
-    <link rel="stylesheet" href="/css/customStyles.css">
+    <link rel="stylesheet" href="./static/css/output.css">
+    <link rel="stylesheet" href="./static/css/customStyles.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
 
         <!-- Logo Section -->
         <div class="w-full max-w-4xl flex justify-start items-start pb-5">
-            <img src="/assets/img/svg/logo.svg" alt="">
+            <img src="./static/assets/img/svg/logo.svg" alt="">
         </div>
 
         <!-- Wrapper for Container and Stripes -->
@@ -27,37 +27,37 @@
                         <form class="space-y-2">
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday1')">
                                 <input type="checkbox" id="everyday1" name="everyday1">
-                                <img src="/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday1">
+                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday1">
                                 <label for="everyday1">Юрист</label>
                             </div>
                     
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday2')">
                                 <input type="checkbox" id="everyday2" name="everyday2">
-                                <img src="/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday2">
+                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday2">
                                 <label for="everyday2">Предприниматель</label>
                             </div>
                     
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday3')">
                                 <input type="checkbox" id="everyday3" name="everyday3">
-                                <img src="/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday3">
+                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday3">
                                 <label for="everyday3">Инженер</label>
                             </div>
                     
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday4')">
                                 <input type="checkbox" id="everyday4" name="everyday4">
-                                <img src="/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday4">
+                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday4">
                                 <label for="everyday4">Студент</label>
                             </div>
                     
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday5')">
                                 <input type="checkbox" id="everyday5" name="everyday5">
-                                <img src="/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday5">
+                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday5">
                                 <label for="everyday5">Дизайнер</label>
                             </div>
                     
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday6')">
                                 <input type="checkbox" id="everyday6" name="everyday6">
-                                <img src="/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday6">
+                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday6">
                                 <label for="everyday6">IT</label>
                             </div>
 
@@ -69,43 +69,43 @@
                         <form class="space-y-2">
                             <div class="checkbox-container" onclick="toggleCheckbox('home1')">
                                 <input type="checkbox" id="home1" name="home1">
-                                <img src="/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home1">
+                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home1">
                                 <label for="home1">Ресторанный бизнес</label>
                             </div>
                     
                             <div class="checkbox-container" onclick="toggleCheckbox('home2')">
                                 <input type="checkbox" id="home2" name="home2">
-                                <img src="/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home2">
+                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home2">
                                 <label for="home2">Личный помощник</label>
                             </div>
                     
                             <div class="checkbox-container" onclick="toggleCheckbox('home3')">
                                 <input type="checkbox" id="home3" name="home3">
-                                <img src="/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home3">
+                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home3">
                                 <label for="home3">Продавец</label>
                             </div>
                     
                             <div class="checkbox-container" onclick="toggleCheckbox('home4')">
                                 <input type="checkbox" id="home4" name="home4">
-                                <img src="/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home4">
+                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home4">
                                 <label for="home4">Архитектор</label>
                             </div>
                     
                             <div class="checkbox-container" onclick="toggleCheckbox('home5')">
                                 <input type="checkbox" id="home5" name="home5">
-                                <img src="/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home5">
+                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home5">
                                 <label for="home5">Консультант</label>
                             </div>
                     
                             <div class="checkbox-container" onclick="toggleCheckbox('home6')">
                                 <input type="checkbox" id="home6" name="home6">
-                                <img src="/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home6">
+                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home6">
                                 <label for="home6">Менеджмент</label>
                             </div>
 
                             <div class="checkbox-container" onclick="toggleCheckbox('home7')">
                                 <input type="checkbox" id="home7" name="home7">
-                                <img src="/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home7">
+                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-home7">
                                 <label for="home7">Сейчас не работаю</label>
                             </div>
 
@@ -116,14 +116,14 @@
                 <div class="flex justify-end mt-6">
                     <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
                         <button onclick="window.location.href='colorsWoman.html'">
-                            <img src="/assets/img/png/prev.png" alt="">
+                            <img src="./static/assets/img/png/prev.png" alt="">
                         </button>
                         
                         <!-- Separator -->
                         <div class="w-1 h-8 bg-customBlack mx-2"></div>
                         
                         <button onclick="window.location.href='chooseHairColor.html'">
-                            <img src="/assets/img/png/next.png" alt="">
+                            <img src="./static/assets/img/png/next.png" alt="">
                         </button>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
         </div>
 
         <div class="absolute right-28 top-72">
-            <img src="/assets/img/png/janna-full.png" alt="">
+            <img src="./static/assets/img/png/janna-full.png" alt="">
         </div>
 
     </div>
@@ -146,7 +146,7 @@
     const checkbox = document.getElementById(id);
     const img = document.getElementById(`img-${id}`);
     checkbox.checked = !checkbox.checked;
-    img.src = checkbox.checked ? '/assets/img/svg/crystallActive.svg' : '/assets/img/svg/crystall.svg';
+    img.src = checkbox.checked ? './static/assets/img/svg/crystallActive.svg' : './static/assets/img/svg/crystall.svg';
 }
     </script>
 
