--- a/templates/chooseKabluck.html
+++ b/templates/chooseKabluck.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/output.css">
-    <link rel="stylesheet" href="/css/customStyles.css">
+    <link rel="stylesheet" href="./static/css/output.css">
+    <link rel="stylesheet" href="./static/css/customStyles.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
 
         <!-- Logo Section -->
         <div class="w-full max-w-4xl flex justify-start items-start pb-5">
-            <img src="/assets/img/svg/logo.svg" alt="">
+            <img src="./static/assets/img/svg/logo.svg" alt="">
         </div>
 
         <!-- Wrapper for Container and Stripes -->
@@ -28,13 +28,13 @@
                             
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday1')">
                                 <input type="checkbox" id="everyday1" name="everyday1">
-                                <img src="/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday1">
+                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday1">
                                 <label for="everyday1">С каблуком</label>
                             </div>
                     
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday2')">
                                 <input type="checkbox" id="everyday2" name="everyday2">
-                                <img src="/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday2">
+                                <img src="./static/assets/img/svg/crystall.svg" alt="Unchecked" class="checkbox-image" id="img-everyday2">
                                 <label for="everyday2">Без каблука</label>
                             </div>
 
@@ -45,14 +45,14 @@
                 <div class="flex justify-end mt-6">
                     <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
                         <button onclick="window.location.href='chooseSizeBottomWoman.html'">
-                            <img src="/assets/img/png/prev.png" alt="">
+                            <img src="./static/assets/img/png/prev.png" alt="">
                         </button>
                         
                         <!-- Separator -->
                         <div class="w-1 h-8 bg-customBlack mx-2"></div>
                         
                         <button onclick="window.location.href='chooseSizeTopWoman.html'">
-                            <img src="/assets/img/png/next.png" alt="">
+                            <img src="./static/assets/img/png/next.png" alt="">
                         </button>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
         </div>
 
         <div class="absolute right-28 top-72">
-            <img src="/assets/img/png/janna-full.png" alt="">
+            <img src="./static/assets/img/png/janna-full.png" alt="">
         </div>
 
     </div>
@@ -75,7 +75,7 @@
     const checkbox = document.getElementById(id);
     const img = document.getElementById(`img-${id}`);
     checkbox.checked = !checkbox.checked;
-    img.src = checkbox.checked ? '/assets/img/svg/crystallActive.svg' : '/assets/img/svg/crystall.svg';
+    img.src = checkbox.checked ? './static/assets/img/svg/crystallActive.svg' : './static/assets/img/svg/crystall.svg';
 }
     </script>
 
