--- a/templates/choosePosadka.html
+++ b/templates/choosePosadka.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/output.css">
-        <link rel="stylesheet" href="/css/customStyles.css">
+        <link rel="stylesheet" href="./static/css/output.css">
+        <link rel="stylesheet" href="./static/css/customStyles.css">
         <title>Document</title>
 </head>
 <body class="bg-gray-200">
@@ -13,7 +13,7 @@
         <!-- Wrapper for Container and Stripes -->
         <div class="w-full max-w-4xl">
             <div class="w-full max-w-4xl flex justify-start items-start pb-5">
-                <img src="/assets/img/svg/logo.svg" alt="Logo">
+                <img src="./static/assets/img/svg/logo.svg" alt="Logo">
             </div>
 
             <!-- Card Selection Section -->
@@ -27,7 +27,7 @@
                             <!-- Card 1 -->
                             <div class="flex flex-col items-center">
                                 <div class="w-auto h-auto border-2 border-customBlack cursor-pointer" onclick="toggleSquare(this, 'high')" data-posadka-type="high">
-                                    <img src="/assets/img/png/jeansForm1.png" alt="High" class="w-full h-full object-cover">
+                                    <img src="./static/assets/img/png/jeansForm1.png" alt="High" class="w-full h-full object-cover">
                                 </div>
                                 <span class="mt-2 text-sm text-center">Высокая</span>
                             </div>
@@ -35,7 +35,7 @@
                             <!-- Card 2 -->
                             <div class="flex flex-col items-center">
                                 <div class="w-auto h-auto border-2 border-customBlack cursor-pointer" onclick="toggleSquare(this, 'medium')" data-posadka-type="medium">
-                                    <img src="/assets/img/png/jeansForm2.png" alt="Medium" class="w-full h-full object-cover">
+                                    <img src="./static/assets/img/png/jeansForm2.png" alt="Medium" class="w-full h-full object-cover">
                                 </div>
                                 <span class="mt-2 text-sm text-center">Средняя</span>
                             </div>
@@ -43,7 +43,7 @@
                             <!-- Card 3 -->
                             <div class="flex flex-col items-center">
                                 <div class="w-auto h-auto border-2 border-customBlack cursor-pointer" onclick="toggleSquare(this, 'low')" data-posadka-type="low">
-                                    <img src="/assets/img/png/jeansForm3.png" alt="Low" class="w-full h-full object-cover">
+                                    <img src="./static/assets/img/png/jeansForm3.png" alt="Low" class="w-full h-full object-cover">
                                 </div>
                                 <span class="mt-2 text-sm text-center">Низкая</span>
                             </div>
@@ -55,14 +55,14 @@
                 <div class="flex justify-end mt-6">
                     <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
                         <button onclick="window.location.href='skin10.html'">
-                            <img src="/assets/img/png/prev.png" alt="Previous">
+                            <img src="./static/assets/img/png/prev.png" alt="Previous">
                         </button>
                         
                         <!-- Separator -->
                         <div class="w-1 h-8 bg-customBlack mx-2"></div>
                         
                         <button onclick="window.location.href='chooseDeatelnost.html'">
-                            <img src="/assets/img/png/next.png" alt="Next">
+                            <img src="./static/assets/img/png/next.png" alt="Next">
                         </button>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                 <div class="rounded-xl bg-customWhite text-center border border-customBlack text-xl px-8 py-4">
                     <p>Какая посадка вам нравится?</p>
                 </div>
-                <img src="/assets/img/png/janna-skin10.png" alt="Janna">
+                <img src="./static/assets/img/png/janna-skin10.png" alt="Janna">
             </div>
 
             <!-- Stripes -->
