--- a/templates/skin2.html
+++ b/templates/skin2.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/output.css">
-        <link rel="stylesheet" href="/css/customStyles.css">
+        <link rel="stylesheet" href="./static/css/output.css">
+        <link rel="stylesheet" href="./static/css/customStyles.css">
         <title>Document</title>
      </head>
      <body class="bg-customGray">
@@ -14,46 +14,46 @@
             <div class="w-full max-w-4xl">
 
                 <div class="w-full max-w-4xl flex justify-start items-start pb-5">
-                    <img src="/assets/img/svg/logo.svg" alt="">
+                    <img src="./static/assets/img/svg/logo.svg" alt="">
                 </div>
                 <!-- Card Selection Section -->
                 <div class="bg-customWhite p-8 shadow-md relative">
 
                     <div class="flex justify-center items-center">
-                        <img src="/assets/img/png/skin2.png" alt="Логотип" class="max-w-full h-auto">
+                        <img src="./static/assets/img/png/skin2.png" alt="Логотип" class="max-w-full h-auto">
                     </div>
 
                     <div class="absolute top-10 right-64">
                         <!-- Картинка с кастомным чекбоксом -->
-                        <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
+                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox1" onclick="toggleCheckboxImage('likeCheckbox1')">
                         <!-- Скрытое поле для хранения состояния чекбокса -->
                         <input type="hidden" id="likeCheckboxState1" name="likeCheckboxState1" value="false">
                     </div>
                     
                     <div class="absolute top-10 left-72">
                         <!-- Картинка с кастомным чекбоксом -->
-                        <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
+                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox2" onclick="toggleCheckboxImage('likeCheckbox2')">
                         <!-- Скрытое поле для хранения состояния чекбокса -->
                         <input type="hidden" id="likeCheckboxState2" name="likeCheckboxState2" value="false">
                     </div>
                     
                     <div class="absolute top-72 left-72">
                         <!-- Картинка с кастомным чекбоксом -->
-                        <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox3" onclick="toggleCheckboxImage('likeCheckbox3')">
+                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox3" onclick="toggleCheckboxImage('likeCheckbox3')">
                         <!-- Скрытое поле для хранения состояния чекбокса -->
                         <input type="hidden" id="likeCheckboxState3" name="likeCheckboxState3" value="false">
                     </div>
                     
                     <div class="absolute top-52 right-96">
                         <!-- Картинка с кастомным чекбоксом -->
-                        <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
+                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox4" onclick="toggleCheckboxImage('likeCheckbox4')">
                         <!-- Скрытое поле для хранения состояния чекбокса -->
                         <input type="hidden" id="likeCheckboxState4" name="likeCheckboxState4" value="false">
                     </div>
                     
                     <div class="absolute top-72 right-64">
                         <!-- Картинка с кастомным чекбоксом -->
-                        <img src="/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
+                        <img src="./static/assets/img/svg/likeWhite.svg" alt="Like" class="checkbox-image" id="likeCheckbox5" onclick="toggleCheckboxImage('likeCheckbox5')">
                         <!-- Скрытое поле для хранения состояния чекбокса -->
                         <input type="hidden" id="likeCheckboxState5" name="likeCheckboxState5" value="false">
                     </div>
@@ -61,14 +61,14 @@
                     <div class="flex justify-end mt-6">
                         <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
                             <button onclick="window.location.href='skin1.html'">
-                                <img src="/assets/img/png/prev.png" alt="">
+                                <img src="./static/assets/img/png/prev.png" alt="">
                             </button>
                             
                             <!-- Separator -->
                             <div class="w-1 h-8 bg-customBlack mx-2"></div>
                             
                             <button onclick="window.location.href='skin3.html'">
-                                <img src="/assets/img/png/next.png" alt="">
+                                <img src="./static/assets/img/png/next.png" alt="">
                             </button>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                         <p>Как вам образ?</p>
                     </div>
 
-                    <img src="/assets/img/png/janna-skin2.png" alt="">
+                    <img src="./static/assets/img/png/janna-skin2.png" alt="">
                 </div>
 
                 <!-- Green and Black Stripes -->
@@ -97,10 +97,10 @@
     
     // Переключаем изображение
     if (clickedImage.src.includes('likeWhite.svg')) {
-        clickedImage.src = '/assets/img/svg/likeRed.svg';  // Изменяем на красный
+        clickedImage.src = './static/assets/img/svg/likeRed.svg';  // Изменяем на красный
         checkboxState.value = 'true';  // Обновляем состояние чекбокса на "выбрано"
     } else {
-        clickedImage.src = '/assets/img/svg/likeWhite.svg'; // Изменяем на белый
+        clickedImage.src = './static/assets/img/svg/likeWhite.svg'; // Изменяем на белый
         checkboxState.value = 'false';  // Обновляем состояние чекбокса на "не выбрано"
     }
 }
