--- a/templates/lkStilist.html
+++ b/templates/lkStilist.html
@@ -42,8 +42,9 @@
   
               <!-- Имя, Фамилия и Возраст -->
               <div>
-                <h2 class="text-2xl font-bold">Елена</h2>
-                <p class="text-2xl">Спиридонова</p>
+                <h2 class="text-2xl font-bold">{{user_info.first_name}}</h2>
+                <p class="text-2xl">{{user_info.last_name}}</p>
+                <a href="/logout">logout</a>
               </div>
             </div>
             
@@ -55,7 +56,7 @@
             <div class="space-y-4">
               <button class="w-full bg-black text-white py-3 rounded-full hover:bg-gray-800">Разобрать гардероб</button>
               <button class="w-full bg-black text-white py-3 rounded-full hover:bg-gray-800">Составить капсулу</button>
-              <button class="w-full bg-black text-white py-3 rounded-full hover:bg-gray-800">Чат со стилистом</button>
+              <a href="/chatsCL"><button class="w-full bg-black text-white py-3 rounded-full hover:bg-gray-800">Чат со стилистом</button></a>
               <button class="w-full bg-black text-white py-3 rounded-full hover:bg-gray-800">Видеозвонок стилисту</button>
             </div>
           </div>
