--- a/templates/registrationStilist.html
+++ b/templates/registrationStilist.html
@@ -19,7 +19,7 @@
             <!-- Левая часть с регистрацией -->
             <div class="w-full md:w-1/2 p-4">
                <h2 class="text-3xl font-bold mb-6">Регистрация стилиста</h2>
-               <form>
+               <form method="post">
                   <!-- Имя -->
                   <div class="mb-4">
                      <label for="name" class="block text-gray-700 mb-2">Имя</label>
