--- a/templates/auth.html
+++ b/templates/auth.html
@@ -16,7 +16,7 @@
             <div class="w-full md:w-1/2">
                <h1 class="text-2xl font-bold text-gray-800 mb-4">Войти</h1>
                <p class="text-gray-600 mb-6">Войти в свой аккаунт</p>
-               <form class="space-y-4">
+               <form class="space-y-4" method="post">
                   <div>
                      <label for="email" class="block text-gray-700 font-medium">Email</label>
                      <input type="email" name="email" id="email" placeholder="chic@mail.com" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-customGreen">
@@ -36,7 +36,7 @@
                   <hr class="flex-grow border-customGray">
                </div>
 
-               <a href="category.html">
+               <a href="/chooseClientOrStyle">
                   <button class="w-full px-4 py-2 bg-customWhite border border-gray-300 text-gray-700 font-bold rounded-lg hover:bg-gray-100">Зарегистрироваться</button>
                </a>
             </div>
