--- a/templates/chooseClientOrStyle.html
+++ b/templates/chooseClientOrStyle.html
@@ -22,24 +22,19 @@
                      <label for="male" class="w-full">
                         <input type="radio" id="male" name="gender" value="male" class="hidden peer">
                         <div class="w-full px-6 py-3 bg-gray-300 text-gray-800 font-bold rounded-lg text-center peer-checked:bg-black peer-checked:text-white transition duration-300 cursor-pointer">
-                           Клиент
+                           <a href="/registrationCL">Клиент</a>
                         </div>
                      </label>
                      <!-- Радиокнопка для Женского пола -->
                      <label for="female" class="w-full">
                         <input type="radio" id="female" name="gender" value="female" class="hidden peer">
                         <div class="w-full px-6 py-3 bg-gray-300 text-gray-800 font-bold rounded-lg text-center peer-checked:bg-black peer-checked:text-white transition duration-300 cursor-pointer">
-                           Стилист
+                           <a href="/registrationST">Стилист</a>
                         </div>
                      </label>
                   </div>
 
-                  <div class="mt-6 text-center">
-                     <button 
-                       id="submitGender" class="px-8 py-3 bg-gray-300 text-gray-800 font-bold rounded-lg hover:bg-black transition duration-300">
-                       Выбрать
-                     </button>
-                  </div>
+                  
 
                </div>
             </form>
