--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
       </div>
   
       <!-- Login Button -->
-       <a href="auth.html">
+       <a href="/auth">
         <button class="mt-10 text-xl px-8 py-4 bg-lime-400 text-black font-semibold rounded-full hover:bg-lime-500 transition">
           ВОЙТИ
         </button>
