--- a/templates/lkClient.html
+++ b/templates/lkClient.html
@@ -42,9 +42,10 @@
   
               <!-- Имя, Фамилия и Возраст -->
               <div>
-                <h2 class="text-2xl font-bold">Иванова</h2>
-                <p class="text-2xl">Екатерина</p>
+                <h2 class="text-2xl font-bold">{{user_info.last_name}}</h2>
+                <p class="text-2xl">{{user_info.first_name}}</p>
                 <p class="text-gray-600 text-xl">16 лет</p>
+                <a href="/logout">logout</a>
               </div>
             </div>
             
@@ -86,7 +87,7 @@
             <div class="space-y-4">
               <button class="w-full bg-black text-white py-3 rounded-full hover:bg-gray-800">Разобрать гардероб</button>
               <button class="w-full bg-black text-white py-3 rounded-full hover:bg-gray-800">Составить капсулу</button>
-              <button class="w-full bg-black text-white py-3 rounded-full hover:bg-gray-800">Чат со стилистом</button>
+              <a href="/chatsCL"><button class="w-full bg-black text-white py-3 rounded-full hover:bg-gray-800">Чат со стилистом</button></a>
               <button class="w-full bg-black text-white py-3 rounded-full hover:bg-gray-800">Видеозвонок стилисту</button>
             </div>
           </div>
